# shipready

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements.txt
dogfood/: traj_to_shipready.py
src/shipready/: __init__.py  cli.py  grader.py  models.py  report.py  workbook.py
tests/: test_grader.py  test_shipready.py  test_workbook.py
