[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shipready"
version = "0.2.0"
description = "Rubric based ship-readiness evals for AI agents."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Agni Tripathi" }]
keywords = ["llm", "agents", "evaluation", "eval", "rubric", "claude"]
classifiers = [
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
]
dependencies = [
    "anthropic>=0.40",
    "pydantic>=2.6",
    "pyyaml>=6.0",
    "click>=8.1",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
shipready = "shipready.cli:cli"

[project.urls]
Homepage = "https://github.com/agnitrip/shipready"
Issues = "https://github.com/agnitrip/shipready/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
shipready = ["py.typed"]
